--- a/LoginColor/colorselectionpage.html
+++ b/LoginColor/colorselectionpage.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
+    <title>Color Selection Page</title>
 </head>
 <body>
-    <h1>Select a Color</h1>
-    <form action="page1.html" method="get">
+    <form action="page1.html" method="GET">
         <label for="color">Choose a color:</label>
         <select id="color" name="color">
+            <option value="white">White</option>
             <option value="red">Red</option>
             <option value="blue">Blue</option>
             <option value="green">Green</option>
             <option value="yellow">Yellow</option>
-	    <option value="pink">Pink</option>
-<option value="purple">Purple</option>
         </select>
-        <br><br>
-        <button type="submit">Set</button>
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
