--- a/LoginColor/page1.html
+++ b/LoginColor/page1.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Page 1</title>
+    <style>
+        body {
+            background-color: {{color}};
+        }
+    </style>
 </head>
-<body style="background-color: {{color}};">
-    <h1>Page 1 </h1>
+<body>
+    <h1>Welcome to Page 1</h1>
 </body>
 </html>
