--- a/LoginColor/colorselectionpage.html
+++ b/LoginColor/colorselectionpage.html
@@ -12,6 +12,9 @@
             <option value="blue">Blue</option>
             <option value="green">Green</option>
             <option value="yellow">Yellow</option>
+	    <option value="grey">Grey</option>
+	    <option value="purple">Purple</option>
+	    <option value="pink">Pink</option>
         </select>
         <input type="submit" value="Submit">
     </form>
