--- a/LoginColor/page3.html
+++ b/LoginColor/page3.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>Page 3</title>
+    <style>
+        body {
+            background-color: {{color}};
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Page 3</h1>
